글쓰기 기능 추가, 모달, 동적쿼리

--- a/mainProject/src/main/webapp/resources/css/board.css
+++ b/mainProject/src/main/webapp/resources/css/board.css
@@ -3,14 +3,17 @@
 	text-align: left;
 }
 .title > a {
-  text-decoration: none;
+	text-decoration: none;
 }
 .title > a {
-  color: black;
+	color: black;
 }
 .title > a:hover {
 	color: skyblue;
 }
 .badge{
 	background-color: skyblue;
+}
+.vh-500{
+	height: 500px;
 }
