--- a/mainProject/src/main/webapp/resources/css/board.css
+++ b/mainProject/src/main/webapp/resources/css/board.css
@@ -1,4 +1,9 @@
 @charset "UTF-8";
+body{
+	font-family: "Gowun Dodum", sans-serif;
+	font-weight: 400;
+	font-style: normal;
+}
 .w1{
 	width: 10%;
 }
