관리자페이지 생성중

--- a/mainProject/src/main/webapp/resources/css/board.css
+++ b/mainProject/src/main/webapp/resources/css/board.css
@@ -24,8 +24,10 @@ body{
 	color: skyblue;
 	text-shadow: 0.3px 0.3px blue;
 }
-.badge{
-	background-color: skyblue;
+.comments{
+	color:red;
+	font-size: smaller;
+	font-weight: bold;
 }
 .vh-500{
 	height: 500px;
