--- a/mainProject/src/main/webapp/resources/admin/css/board.css
+++ b/mainProject/src/main/webapp/resources/admin/css/board.css
@@ -10,9 +10,17 @@
 }
 .title{
 	text-align: left;
-	width: 40%;
+	width: 30%;
 }
 .paging{
 	width: 100%;
 	text-align: center;
+}
+.ip a{
+	text-decoration: none;
+	color : grey;
+}
+.ip a :hover{
+	text-decoration: none;
+	color : black;
 }
